Two new plugins, type defaulting and Nat simplification
Type defaulting makes everything far more usable, unknown properties are guessed
Nat simplification is experimental, but appears to simplify types tremendously.
Taking types that span 200 messy lines down to a few easy to understand constraints.
Better non-zero constraints that are much easier to simplify
Some more docker and build system improvements

--- a/haskell-torch/package.yaml
+++ b/haskell-torch/package.yaml
@@ -84,6 +84,8 @@ library:
     - zlib
     - monad-logger
     - docopt
+    - default-type-plugin
+    - simplify-nat-algebra-plugin
 
 tests:
   doctest:
